# CodeMarshal

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  COMPREHENSIVE_VALIDATION_REPORT.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  README.truth.md  ROADMAP.md  Structure.md  __init__.py  agent_nexus.yaml  agent_nexus_test.yaml  analyze_streaming_results.py  architecture.md  constitution.truth.md  count_loc.py  docker-compose.yml  fix_syntax_errors.py  gemini.md  manual.md  monitor_wrapper.ps1  performance_monitor.py  plan.md  production_deployment_config.py  pyproject.toml  requirements.txt  run_50k_test.py  run_smoke_test.py  setup.ps1  setup.sh  test_agent_nexus_core.py  test_constitutional_config.py  test_resume.py  test_resume_interrupt.py  test_resume_simple.py  test_streaming.py  validation_script.py  (+1 more)
.codemarshal/audit_logs/: index.json
.github/ISSUE_TEMPLATE/: docker-ga-validation-v2.2.0.md
.github/workflows/: codemarshal.yml
_mixed_lang_repo/: app.py
_mixed_lang_repo/go/: main.go
_mixed_lang_repo/web/: app.js  lib.ts  util.js
bridge/: __init__.py  results.py
bridge/commands/: __init__.py  backup.py  cleanup.py  comment.py  config.py  export.py  graph.py  history.py  investigate.py  observe.py  pattern.py  query.py  recommendations.py  repair.py  search.py  search_semantic.py  share.py  team.py  test_cmd.py  watch.py
bridge/coordination/: __init__.py  caching.py  scheduling.py
bridge/entry/: __init__.py  api.py  cli.py  gui.py  implementation.py  tui.py
bridge/integration/: __init__.py  ci.py  editor.py  export_formats.py  jupyter_exporter.py  pdf_exporter.py  svg_exporter.py
collaboration/: __init__.py  comments.py  encryption.py  sharing.py  team.py
config/: __init__.py  agent_nexus.yaml  boundaries.py  defaults.py  loader.py  schema.py  user.py
core/: __init__.py  context.py  engine.py  interfaces.py  memory_monitor_interface.py  runtime.py  shutdown.py  state.py  storage_interface.py
core/search/: semantic_search.py
deployment_logs/: agent_nexus_summary.json  audit_arch_imports.py  audit_run_started.txt
desktop/: __init__.py  app.py  resources.qrc  theme.py
desktop/core/: __init__.py  command_bridge.py  exceptions.py  runtime_facade.py  session_manager.py  view_state.py  worker.py
desktop/packaging/: build_windows.ps1  codemarshal_gui.spec  launch_gui.py
desktop/ui/: __init__.py  themes.py
desktop/views/: __init__.py  export.py  home.py  investigate.py  knowledge.py  observe.py  patterns.py
desktop/widgets/: __init__.py  a11y.py  action_strip.py  comments_panel.py  diff_viewer.py  empty_state_card.py  error_dialog.py  hint_panel.py  history_sidebar.py  knowledge_canvas.py  marketplace_panel.py  metric_pill.py  onboarding_dialog.py  page_scaffold.py  results_viewer.py  section_header.py  sidebar_nav.py  templates_panel.py  top_context_bar.py
docs/: API_DOCUMENTATION.md  CHANGELOG.md  FEATURES.md  INTEGRATION_EXAMPLES.md  README.truth.md  RELEASE_CHECKLIST_v2.2.0-rc1.md  RELEASE_CHECKLIST_v2.2.0.md  Structure.md  USER_GUIDE.md  architecture.md  collaboration.md  index.md  pattern_library.md
hooks/: codemarshal-constitutional.py
inquiry/: __init__.py  interface.py
inquiry/answers/: __init__.py  anomaly_detector.py  connection_mapper.py  purpose_extractor.py  structure_analyzer.py  thinking_engine.py
inquiry/notebook/: __init__.py  constraints.py  entries.py  export.py  models.py  organization.py  timeline.py
inquiry/patterns/: __init__.py  complexity.py  coupling.py  density.py  uncertainty.py  violations.py
inquiry/questions/: __init__.py  anomalies.py  connections.py  purpose.py  structure.py  thinking.py
inquiry/session/: __init__.py  context.py  history.py  recovery.py
integrity/: __init__.py
integrity/adapters/: __init__.py  memory_monitor_adapter.py
integrity/monitoring/: __init__.py  drift.py  errors.py  memory.py  performance.py
integrity/prohibitions/: __init__.py  network_prohibition.py  network_prohibition.test.py  no_mutation.py  no_mutation.test.py  no_network.py  no_network.test.py  no_runtime_imports.py  no_runtime_imports.test.py
jetbrains-plugin/: IMPROVEMENTS.md  README.md  build.gradle.kts
knowledge/: __init__.py  base.py  history.py  knowledge_graph.py  recommendations.py
lens/: __init__.py  interface.py
nvim-plugin/: README.md
observations/: __init__.py  boundary_checker.py  interface.py
patterns/: __init__.py  collector.py  engine.py  loader.py  marketplace.py  templates.py
scripts/: cleanup_locked_pytest_dirs.ps1  docker-build.sh  docker-entrypoint.sh  docker-run.sh  monitor_wrapper.sh  prepare_large_run.py  test_boundaries.py
storage/: __init__.py  atomic.py  backup.py  change_storage.py  collaboration_storage.py  corruption.py  embedding_storage.py  gui_state.json  investigation_storage.py  knowledge_storage.py  layout.py  migration.py  schema.py  transactional.py
tests/: __init__.py  conftest.py  crash_recovery.test.py  end_to_end.test.py  invariants.test.py  invariants_test.py  metaphor_consistency.test.py  performance.test.py  test_anchor_import_signature.py  test_boundary_system.py  test_collaboration_comments.py  test_collaboration_encryption.py  test_collaboration_sharing.py  test_collaboration_storage.py  test_collaboration_team.py  test_desktop_a11y_labels.py  test_desktop_app_onboarding.py  test_desktop_command_bridge.py  test_desktop_comments_panel.py  test_desktop_diff_viewer.py  test_desktop_history_sidebar.py  test_desktop_keyboard_navigation.py  test_desktop_knowledge_canvas.py  test_desktop_marketplace_panel.py  test_desktop_onboarding_dialog.py  test_desktop_page_scaffold_layout.py  test_desktop_results_viewer.py  test_desktop_runtime_facade.py  test_desktop_session_manager.py  test_desktop_shell_layout.py  test_desktop_templates_panel.py  test_desktop_view_state.py  test_desktop_views_validation.py  test_end_to_end.py  test_export_system.py  test_go_sight.py  test_integration.py  test_java_sight.py  test_javascript_sight.py  test_knowledge.py  (+13 more)
vscode-extension/: package-lock.json  package.json  tsconfig.json
(+287 files in other folders)
